--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "chalk": "^1.1.3",
-    "express": "^4.14.0"
+    "debug": "^2.2.0",
+    "express": "^4.14.0",
+    "lodash": "^4.15.0",
+    "rpio": "^0.9.12",
+    "socket.io": "^1.4.8"
   },
   "devDependencies": {
     "standard": "^8.0.0"
