--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "alarmpi",
+  "name": "pupper",
   "version": "1.0.0",
-  "description": "Home automation with Node and Raspberry Pi ",
+  "description": "Raspberry Pi GPIO access made easy",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -15,6 +15,7 @@
     "debug": "^2.2.0",
     "express": "^4.14.0",
     "lodash": "^4.15.0",
+    "lowdb": "^0.13.1",
     "rpio": "^0.9.12",
     "socket.io": "^1.4.8"
   },
