--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "standard src/ ; exit 0",
-    "test": "ava --serial",
+    "test": "ava",
     "test:watch": "npm run test -- -w",
     "build": "rimraf dist && babel src -d dist",
     "start": "node ./dist",
@@ -24,9 +24,9 @@
     ]
   },
   "dependencies": {
-    "bcryptjs": "^2.3.0",
     "body-parser": "^1.15.2",
     "chalk": "^1.1.3",
+    "cors": "^2.8.1",
     "debug": "^2.2.0",
     "express": "^4.14.0",
     "express-jwt": "^5.0.0",
