--- a/package.json
+++ b/package.json
@@ -29,14 +29,10 @@
     "cors": "^2.8.1",
     "debug": "^2.2.0",
     "express": "^4.14.0",
-    "express-jwt": "^5.0.0",
-    "jsonwebtoken": "^7.1.9",
     "lodash": "^4.15.0",
     "lowdb": "^0.13.1",
-    "node-fetch": "^1.6.1",
     "rpio": "^0.9.12",
-    "socket.io": "^1.4.8",
-    "socketio-jwt": "^4.5.0"
+    "socket.io": "^1.4.8"
   },
   "devDependencies": {
     "ava": "^0.16.0",
